--- a/therapia_flutter_application/pubspec.yaml
+++ b/therapia_flutter_application/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
 
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.5
+  salomon_bottom_bar: ^3.0.0
 
 dev_dependencies:
   flutter_test:
