--- a/therapia_flutter_application/pubspec.yaml
+++ b/therapia_flutter_application/pubspec.yaml
@@ -19,6 +19,29 @@ dependencies:
   flutter_svg: ^2.0.5
   salomon_bottom_bar: ^3.0.0
   firebase_auth: ^4.15.3
+  cloud_firestore: ^4.13.6
+  firebase_core: ^2.24.2
+  flutter_native_splash: ^2.3.7
+  flutter_launcher_icons: ^0.13.1
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "lib/core/assets/icon/therpeia_logo.ico"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "lib/core/assets/images/therpeia_logo.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "lib/core/assets/images/therpeia_logo.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "lib/core/assets/images/therpeia_logo.png"
+
+
 
 dev_dependencies:
   flutter_test:
@@ -36,6 +59,12 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
+flutter_native_splash:
+  color: "#F9F9F9"
+  image: "lib/core/assets/images/therpeia_logo.png"
+  android: true
+  ios: true
+  
 
 flutter:
 
@@ -44,6 +73,7 @@ flutter:
 
   assets: 
     - lib/core/assets/images/
+    - lib/core/assets/icon/
 
   fonts:
     - family: Quicksand
